[gd_scene load_steps=4 format=3 uid="uid://duxj3vcf2laxm"]

[ext_resource type="FontFile" uid="uid://cwmsvvsc3wshb" path="res://assets/fonts/PixelOperator8.ttf" id="1_7gs2i"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_jhnpt"]
[ext_resource type="Script" path="res://scripts/pause_node.gd" id="3_s16a4"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_jhnpt")

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("1_7gs2i")
theme_override_font_sizes/font_size = 64
text = "0"

[node name="PauseCanvas" type="CanvasLayer" parent="."]

[node name="PauseLabel" type="Label" parent="PauseCanvas"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -61.5
offset_top = -11.5
offset_right = 61.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game is paused"
metadata/_edit_use_anchors_ = true

[node name="Node" type="Node" parent="PauseCanvas"]
process_mode = 2
script = ExtResource("3_s16a4")
